update README and fix bug in #define

--- a/build-C-Compiler-Desktop_Qt_5_7_1_clang_64bit-Debug/Makefile
+++ b/build-C-Compiler-Desktop_Qt_5_7_1_clang_64bit-Debug/Makefile
@@ -62,6 +62,7 @@ OBJECTS       = main.o \
 		optimize.o \
 		moc_mainwindow.o
 DIST          = ../C-Compiler/wenben.txt \
+		../C-Compiler/test.asm \
 		../../Qt/5.7/clang_64/mkspecs/features/spec_pre.prf \
 		../../Qt/5.7/clang_64/mkspecs/qdevice.pri \
 		../../Qt/5.7/clang_64/mkspecs/features/device_config.prf \
